tests/snapshots/run_wpt_conformance__coreml_lstmCell_float16_tensors_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lstm_cell.https.any.js lstmCell float16 tensors with all options, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: lstmCell

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    lstmCellCellState: f16[2, 2];
    lstmCellHiddenState: f16[2, 2];
    lstmCellInput: f16[2, 2];
  }

  consts {
    operand_0: f16[8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);
    operand_4: f16[6] @bytes([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);
    operand_5: f16[8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);
    operand_6: f16[8, 2] @bytes([102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46]);
    operand_7: f16[8, 2] @bytes([0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192]);
  }

  nodes {
    [lstmCellOutput1, lstmCellOutput2] = lstmCell(lstmCellInput, operand_7, operand_6, lstmCellHiddenState, lstmCellCellState, activations=["relu", "relu", "relu"], bias=0, label="", layout="iofg", peepholeWeight=4, recurrentBias=5);
  }

  outputs { lstmCellOutput1; lstmCellOutput2; }
}
